--- a/source/photo.html
+++ b/source/photo.html
@@ -41,5 +41,176 @@
       <p class="page-header__intro-text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
     </div>
   </header>
+
+  <main class="page-main">
+    <section class="photos">
+      <ul class="photos__list">
+        <li class="photos__item photos-item">
+          <a class="photos-item__link" href="#">
+            <picture>
+              <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.webp 1x, img/photo-sunset-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.webp 1x, img/photo-sunset-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/photo-sunset-mobile@1x.webp 1x, img/photo-sunset-mobile@2x.webp 2x">
+              <source media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@1x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg 1x, img/photo-sunset-tablet@2x.jpg 2x">
+              <img src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" srcset="img/photo-sunset-mobile@2x.jpg 2x" alt="Неродные просторы">
+            </picture>
+          </a>
+          <div class="photos-item__description">
+            <div class="photos-item__header">
+              <h3>Неродные просторы</h3>
+              <p>Автор фото: Борис</p>
+            </div>
+            <div class="photos-item__footer">
+              <svg class="icon icon--twitter" width="23" height="21">
+                <use xlink:href="img/sprite.svg#sprite-icon-like"></use>
+              </svg>
+              <p class="photos-item__likes">1350</p>
+            </div>
+          </div>
+        </li>
+        <li class="photos__item photos-item">
+          <a class="photos-item__link" href="#">
+            <picture>
+              <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.webp 1x, img/photo-cactus-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.webp 1x, img/photo-cactus-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/photo-cactus-mobile@1x.webp 1x, img/photo-cactus-mobile@2x.webp 2x">
+              <source media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.jpg 1x, img/photo-cactus-desktop@1x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.jpg 1x, img/photo-cactus-tablet@2x.jpg 2x">
+              <img src="img/photo-cactus-mobile@1x.jpg" width="280" height="280" srcset="img/photo-cactus-mobile@2x.jpg 2x" alt="Местная растительность">
+            </picture>
+          </a>
+          <div class="photos-item__description">
+            <div class="photos-item__header">
+              <h3>Местная растительность</h3>
+              <p>Автор фото: Сергей</p>
+            </div>
+            <div class="photos-item__footer">
+              <svg class="icon icon--twitter" width="23" height="21">
+                <use xlink:href="img/sprite.svg#sprite-icon-like"></use>
+              </svg>
+              <p class="photos-item__likes">143</p>
+            </div>
+          </div>
+        </li>
+        <li class="photos__item photos-item">
+          <a class="photos-item__link" href="#">
+            <picture>
+              <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.webp 1x, img/photo-roads-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.webp 1x, img/photo-roads-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/photo-roads-mobile@1x.webp 1x, img/photo-roads-mobile@2x.webp 2x">
+              <source media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.jpg 1x, img/photo-roads-desktop@1x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.jpg 1x, img/photo-roads-tablet@2x.jpg 2x">
+              <img src="img/photo-roads-mobile@1x.jpg" width="280" height="280" srcset="img/photo-roads-mobile@2x.jpg 2x" alt="Дорога на север">
+            </picture>
+          </a>
+          <div class="photos-item__description">
+            <div class="photos-item__header">
+              <h3>Дорога на север</h3>
+              <p>Автор фото: Петр</p>
+            </div>
+            <div class="photos-item__footer">
+              <svg class="icon icon--twitter" width="23" height="21">
+                <use xlink:href="img/sprite.svg#sprite-icon-like"></use>
+              </svg>
+              <p class="photos-item__likes">96</p>
+            </div>
+          </div>
+        </li>
+        <li class="photos__item photos-item">
+          <a class="photos-item__link" href="#">
+            <picture>
+              <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.webp 1x, img/photo-bridge-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.webp 1x, img/photo-bridge-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/photo-bridge-mobile@1x.webp 1x, img/photo-bridge-mobile@2x.webp 2x">
+              <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg 1x, img/photo-bridge-desktop@1x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.jpg 1x, img/photo-bridge-tablet@2x.jpg 2x">
+              <img src="img/photo-bridge-mobile@1x.jpg" width="280" height="280" srcset="img/photo-bridge-mobile@2x.jpg 2x" alt="Мост дьявола">
+            </picture>
+          </a>
+          <div class="photos-item__description">
+            <div class="photos-item__header">
+              <h3>Мост дьявола</h3>
+              <p>Автор фото: Антон</p>
+            </div>
+            <div class="photos-item__footer">
+              <svg class="icon icon--twitter" width="23" height="21">
+                <use xlink:href="img/sprite.svg#sprite-icon-like"></use>
+              </svg>
+              <p class="photos-item__likes">254</p>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </section>
+    <section class="video">
+      <div class="video__wrapper">
+        <div class="video__header">
+          <h2 class="video__title">Все еще сомневаетесь?</h2>
+          <p class="video__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
+        </div>
+        <div class="video__footer">
+          <div class="video__scroll">
+          </div>
+          <div class="video__player-bottom">
+            <button class="video__replay" type="button">
+              <svg class="icon icon--video-replay" width="16" height="20">
+                <use xlink:href="img/sprite.svg#sprite-icon-video-replay"></use>
+              </svg>
+            </button>
+            <button class="video__subtitles" type="button">
+              <svg class="icon icon--video-subtitles" width="32" height="20">
+                <use xlink:href="img/sprite.svg#sprite-icon-video-subtitles"></use>
+              </svg>
+            </button>
+            <button class="video__fulscreen" type="button">
+              <svg class="icon icon--video-fullscreen" width="20" height="20">
+                <use xlink:href="img/sprite.svg#sprite-icon-video-fullscreen"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="page-footer">
+    <div class="page-footer__wrapper">
+      <p class="page-footer__hashtag">#visitsedona</p>
+      <div class="page-footer__social social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--twitter" href="#" aria-label="Мы в Твиттере">
+              <svg class="icon icon--twitter" width="46" height="48">
+                <use xlink:href="img/sprite.svg#sprite-icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--fb" href="#" aria-label="Мы на Фейсбуке">
+              <svg class="icon icon--fb" width="47" height="48">
+                <use xlink:href="img/sprite.svg#sprite-icon-fb"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--youtube" href="#" aria-label="Мы на ютубе">
+              <svg class="icon icon--youtube" width="46" height="48">
+                <use xlink:href="img/sprite.svg#sprite-icon-youtube"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="page-footer__copyright copyright">
+        <p class="copyright__text">Разработано</p>
+          <a class="copyright__link" href="#">
+            <svg class="icon icon--htmlacademy" width="27" height="34">
+                <use xlink:href="img/sprite.svg#sprite-htmlacademy"></use>
+            </svg>
+          </a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
