--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page-wrapper">
     <header class="page-header">
-      <nav class="main-nav">
+      <nav class="main-nav main-nav--closed">
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
             <a class="site-list__link" href="index.html">Главная</a>
