--- a/source/index.html
+++ b/source/index.html
@@ -50,7 +50,7 @@
         <li class="features__item features__item--blue">
           <h2 class="features__title">Настоящий городок</h2>
             <p class="features__numbers">&ndash; №1 &ndash;</p>
-            <p>Седона - не аттракцион для туристов, там&nbsp;течет своя&nbsp;жизнь</p>
+            <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
         </li>
         <li class="features__image">
           <picture>
@@ -62,17 +62,17 @@
             <img src="img/main-city-mobile@1x.jpg" width="320" height="260" srcset="img/main-city-mobile@2x.jpg 2x" alt="Жизнь в Седоне">
           </picture>
         </li>
-        <li class="features__item">
+        <li class="features__item features__item--icons">
           <h2 class="features__title features__title--house">Жилье</h2>
           <p>Рекомендуем пожить в настоящем мотеле,&nbsp;все&nbsp;как&nbsp;в&nbsp;кино!</p>
         </li>
-        <li class="features__item">
-          <h2 class="features__title features__title--food">Еда</h2>
-          <p>Всегда заказывайте фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
-        </li>
-        <li class="features__item">
+        <li class="features__item features__item--icons">
           <h2 class="features__title features__title--souvenir">Сувениры</h2>
           <p>Не только китайского, но и местного производства!</p>
+        </li>
+        <li class="features__item features__item--icons">
+          <h2 class="features__title features__title--food">Еда</h2>
+          <p>Всегда заказывайте фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
         </li>
         <li class="features__image">
           <picture>
