--- a/source/index.html
+++ b/source/index.html
@@ -64,7 +64,7 @@
         </li>
         <li class="features__item features__item--icons">
           <h2 class="features__title features__title--house">Жилье</h2>
-          <p>Рекомендуем пожить в настоящем мотеле,&nbsp;все&nbsp;как&nbsp;в&nbsp;кино!</p>
+          <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
         </li>
         <li class="features__item features__item--icons">
           <h2 class="features__title features__title--souvenir">Сувениры</h2>
@@ -72,7 +72,12 @@
         </li>
         <li class="features__item features__item--icons">
           <h2 class="features__title features__title--food">Еда</h2>
-          <p>Всегда заказывайте фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
+          <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        </li>
+        <li class="features__item features__item--blue">
+          <h2 class="features__title">Там есть мост&nbsp;дьявола</h2>
+          <p class="features__numbers">&ndash; №2 &ndash;</p>
+          <p>Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
         </li>
         <li class="features__image">
           <picture>
@@ -83,11 +88,6 @@
             <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg 1x, img/main-bridge-tablet@2x.jpg 2x">
             <img src="img/main-bridge-mobile@1x.jpg" width="320" height="260" srcset="img/main-bridge-mobile@2x.jpg 2x" alt="Мост дьявола">
           </picture>
-        </li>
-        <li class="features__item features__item--blue">
-          <h2 class="features__title">Там есть мост&nbsp;дьявола</h2>
-          <p class="features__numbers">&ndash; №2 &ndash;</p>
-          <p>Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
         </li>
         <li class="features__item features__item--gray">
           <h2 class="features__title">Небольшая площадь</h2>
