--- a/source/index.html
+++ b/source/index.html
@@ -92,17 +92,17 @@
         <li class="features__item features__item--gray">
           <h2 class="features__title">Небольшая площадь</h2>
           <p class="features__numbers">&ndash; №3 &ndash;</p>
-          <p>Все интересные места находятся&nbsp;очень&nbsp;близко</p>
+          <p class="features__text">Все интересные места находятся очень близко</p>
         </li>
         <li class="features__item features__item--gray">
           <h2 class="features__title">Красивая дорога</h2>
           <p class="features__numbers">&ndash; №4 &ndash;</p>
-          <p>Ехать в Седону из Лас-Вегаса совсем не&nbsp;скучно!</p>
+          <p class="features__text">Ехать в Седону из Лас-Вегаса совсем&nbsp;не&nbsp;скучно!</p>
         </li>
         <li class="features__item features__item--gray">
           <h2 class="features__title">Мало туристов</h2>
           <p class="features__numbers">&ndash; №5 &ndash;</p>
-          <p>Большинство едет в Гранд Каньон и&nbsp;толпится&nbsp;там</p>
+          <p class="features__text">Большинство едет в Гранд Каньон и&nbsp;толпится&nbsp;там</p>
         </li>
       </ul>
       <section class="hotel-search">
