--- a/source/index.html
+++ b/source/index.html
@@ -107,8 +107,8 @@
       </ul>
       <section class="hotel-search">
         <h2 class="hotel-search__title">Заинтересовались?</h2>
-        <p>Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="hotel-search__btn button" href="#" aria-label="Перейти на страницу с поиском гостинниц">Поиск гостиницы в Седоне</a>
+        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a class="hotel-search__btn button" href="#" aria-label="Перейти на страницу с поиском гостинниц">Найти гостиницу</a>
       </section>
       <section class="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22020.789239683403!2d-111.77892526396639!3d34.87105181997542!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1536428126685"
