--- a/source/index.html
+++ b/source/index.html
@@ -111,7 +111,7 @@
         <a class="hotel-search__btn button" href="#" aria-label="Перейти на страницу с поиском гостинниц">Найти гостиницу</a>
       </section>
       <section class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22020.789239683403!2d-111.77892526396639!3d34.87105181997542!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1536428126685" allowfullscreen></iframe>
+        <iframee src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22020.789239683403!2d-111.77892526396639!3d34.87105181997542!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1536428126685" allowfullscreen></iframe>
         <picture>
           <source type="image/webp" media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.webp 1x, img/bg-map-desktop@2x.webp 2x">
           <source type="image/webp" media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.webp 1x, img/bg-map-tablet@2x.webp 2x">
@@ -130,21 +130,21 @@
           <ul class="social__list">
             <li class="social__item">
               <a class="social__link social__link--twitter" href="#" aria-label="Мы в Твиттере">
-                <svg class="icon icon--twitter" width="46" height="48">
+                <svg class="icon icon--twitter" width="18" height="14">
                   <use xlink:href="img/sprite.svg#sprite-icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--fb" href="#" aria-label="Мы на Фейсбуке">
-                <svg class="icon icon--fb" width="47" height="48">
-                  <use xlink:href="img/sprite.svg#sprite-icon-fb"></use>
+                <svg class="icon icon--fb" width="9" height="18">
+                  <use xlink:href="img/sprite.svg#sprite-icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--youtube" href="#" aria-label="Мы на ютубе">
-                <svg class="icon icon--youtube" width="46" height="48">
+                <svg class="icon icon--youtube" width="20" height="14">
                   <use xlink:href="img/sprite.svg#sprite-icon-youtube"></use>
                 </svg>
               </a>
